--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,17 +1,15 @@
 name: CI/CD using Terraform
-on:
+'on':
   push:
     branches:
       - Complete-CI/CD-with-Terraform-AWS
-
 env:
-   AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-   AWS_SECERT_ACCESS_KEY: ${{ secrets.AWS_SECERT_ACCESS_KEY}}
-   AWS_TF_STATE_BUCKET_NAME: ${{ secrets.AWS_TF_STATE_BUCKET_NAME}}
-   AWS_SSH_KEY_PRIVATE: ${{ secrets.AWS_SSH_KEY_PRIVATE:}}
-   AWS_SSH_KEY_PUBLIC: ${{ secrets.AWS_SSH_KEY_PUBLIC:}}
-   AWS_REGION: us-east-1
-
+  AWS_ACCESS_KEY: '${{ secrets.AWS_ACCESS_KEY }}'
+  AWS_SECERT_ACCESS_KEY: '${{ secrets.AWS_SECERT_ACCESS_KEY}}'
+  AWS_TF_STATE_BUCKET_NAME: '${{ secrets.AWS_TF_STATE_BUCKET_NAME}}'
+  AWS_SSH_KEY_PRIVATE: '${{ secrets.AWS_SSH_KEY_PRIVATE:}}'
+  AWS_SSH_KEY_PUBLIC: '${{ secrets.AWS_SSH_KEY_PUBLIC:}}'
+  AWS_REGION: us-east-1
 jobs:
   deploy-infra:
     runs-on: ubuntu-latest
@@ -23,7 +21,9 @@ jobs:
         with:
           terraform_wrapper: false
       - name: Terraform Init
-        run: terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME" -backend-config="region=us-east-1"
+        run: >-
+          terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME"
+          -backend-config="region=us-east-1"
         working-directory: ./terraform
       - name: Terraform Plan
         id: plan
