--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
           terraform_wrapper: false
       - name: Terraform Init
         id: init
-        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME"
+        run: terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME"
           -backend-config="region=us-east-1"
         working-directory: ./terraform
       - name: Terraform Plan
