--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: CI/CD using Terraform
-'on':
+on:
   push:
     branches:
       - Complete-CI/CD-with-Terraform-AWS
+  workflow_dispatch:
 env:
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
@@ -20,9 +21,9 @@ jobs:
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_wrapper: false
-      - name: Terraform Init
+      - name: Terraform init
         id: init
-        run: terraform init -backend-config="bucket=$AWS_TF_STATE_BUCKET_NAME"
+        run: terraform init -backend-config="bucket=$TF_STATE_BUCKET_NAME"
           -backend-config="region=us-east-1"
         working-directory: ./terraform
       - name: Terraform Plan
