--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,6 @@ jobs:
           -out=PLAN
         working-directory: ./terraform
       - name: Terraform Apply
-        id: applu
+        id: apply
         run: terraform apply PLAN
         working-directory: ./terraform
